# past-coding

./: README.md  muon_fitting_code.py  read_dat_file.py  voronoi.ipynb  xrfhisto.py
geant-test/: CMakeLists.txt  geant_readme.txt  prac.cc
geant-test/include/: action.hh  construction.hh  detector.hh  generator.hh  physics.hh
geant-test/src/: action.cc  construction.cc  detector.cc  generator.cc  physics.cc
